# disk_eraser

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  LINUX_TESTING.md  Makefile  README.md  disk_ops.c  disk_ops.h  main.c  progress.c  progress.h  utils.c  utils.h
.github/workflows/: cmake-multi-platform.yml
